시리즈 쿼리 리팩토링
